[package]
name = "kspacker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
blake3 = { version = "1.3.1", features = ["digest"] }
chrono = "0.4.19"
dirs = "4.0.0"
eframe = "0.18.0"
once_cell = "1.13.0"
rfd = "0.9.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter", "once_cell"] }
zip = { version = "0.6.2", features = ["time", "zstd"] }
